# rambo

./: CMakeLists.txt
first_blood/: CMakeLists.txt
first_blood/source/: additional_algorithm_tests.cpp  main.cpp  tuple_algorithm_tests.cpp  typelist_algorithm_tests.cpp
rambo/: CMakeLists.txt
rambo/include/rambo/: algorithm.hpp  traits.hpp
rambo/include/rambo/runtime/: algorithm.hpp  pop_front.hpp  push_front.hpp  skip.hpp  transform.hpp
rambo/include/rambo/typelist/: algorithm.hpp
